--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Игорь Мартилионес</title>
+	<meta name="yandex-verification" content="3e66b90f54711b53" />
+	
 </head>
 <body>
 	<div class="header">
